--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "cookie-parser": "~1.4.4",
+    "date-and-time": "^2.0.1",
     "debug": "~2.6.9",
     "email-validator": "^2.0.4",
     "express": "~4.16.1",
